# fb_tools

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
code/FB/: README.txt  SetEnv.bat
code/FB/FConstMTT/: Readme.txt
code/FB/TestFSPro/: TestFSPro_ExampleData_README.txt
code/FB/TestFarsite/: Readme.txt
code/FB/TestFlamMap/: Readme.txt
code/FB/TestMTT/: Readme.txt
code/FB/TestSpatialFOFEM/: Readme.txt
code/Python/: 00-LCP_Baseline.ipynb  00_SDI_From_Scratch.ipynb  01_Treatment_Summary.ipynb  01a-LCP_Treated_Landscape.ipynb  01b-LCP_Treated_InSitu.ipynb  02-Batch_FlamMap.ipynb  _testing.ipynb  testing.ipynb
code/dev/MTT/: 01d-MTT_params.ipynb
code/dev/OSM/: _extract_roads.ipynb  (+1 more)
code/notebooks/: 00b-GridMET_ERC-FSProBuild.ipynb  00b_gridMET-FSProBuild.ipynb  00c_gridMET-FlamMapBuild.ipynb  01-HRRR_WindCells.ipynb  10_SDI_From_Scratch.ipynb  Test_FSPro.ipynb  __Modules_Test.ipynb  __Test_FSPro.ipynb  __Test_FSPro_Build.ipynb  _testing.ipynb
documents/: FM_PythonWrapper_How To.docx  Pyromes.qgz
fb_tools/: __init__.py
fb_tools/analysis/: __init__.py  treatments.py  zonal.py
fb_tools/fuelscape/: __init__.py  adjust.py  lcp.py  lfps.py  synthetic.py
fb_tools/models/: __init__.py  base.py  cell2fire.py  container.py  flammap.py  fspro.py  mtt.py  scenarios.py
fb_tools/plotting/: __init__.py  treatments.py
fb_tools/spread/: __init__.py  bp.py  convert.py
fb_tools/suppression/: __init__.py  roads.py  sdi.py
fb_tools/utils/: __init__.py  geo.py  io.py  plot.py
fb_tools/weather/: __init__.py  gridmet.py  hrrr.py  nfdrs.py
(+104 files in other folders)
