[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fb_tools"
version = "0.1.0"
description = "Python wrapper for CLI fire behavior models (FlamMap, FSPro, FSim, MTT)"
authors = [{ name = "Max C. Cook", email = "maxwell.cook@colostate.edu" }]
requires-python = ">=3.10"

# ── Conda-managed (geospatial) dependencies ───────────────────────────────────
# The packages below are intentionally NOT listed here because they must be
# installed via conda (environment.yml) to get the correct platform DLLs.
# Installing them via pip will overwrite conda's GDAL/PROJ/rasterio binaries
# and cause DLL load failures on Windows.
#
#   conda-managed: numpy, pandas, geopandas, rasterio, rioxarray,
#                  xarray, geocube, scipy, matplotlib, shapely
#
# ── Install this package (editable, no pip dependency resolution) ─────────────
# Always use --no-deps so pip does not touch conda-managed packages:
#
#   pip install -e . --no-deps
#
dependencies = [
    # Only pure-Python packages that are safe for pip to manage independently.
    # Everything else lives in environment.yml.
    "requests>=2.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fb_tools*"]
